# robot_formation

./: LICENSE  README.md  memo.txt
base_com/: CMakeLists.txt  package.xml
base_com/launch/: bringup.launch  camera.launch  record_test.launch
base_com/maps/: house.pgm  house.yaml
base_com/param/imu/: imu_calib.yaml
base_com/param/navigation/2wd/: costmap_common_params.yaml
base_com/param/navigation/4wd/: base_local_planner_params.yaml
base_com/param/navigation/mecanum/: base_local_planner_params.yaml
base_com/param/navigation/omni/: base_local_planner_params.yaml
base_com/param/navigation/omni4wd/: base_local_planner_params.yaml
base_com/param/navigation/tank/: base_local_planner_params.yaml
base_com/src/: riki_base_node.cpp
gscam/examples/: forcalibration.launch  v4l.launch
imus_tool/: CMakeLists.txt  package.xml
imus_tool/src/: .imuq2e.cpp.swp  imu_vel2ang.cpp  imuq2e.cpp
path_calculate/: CMakeLists.txt  package.xml
path_calculate/bags/: robot1_2019-02-14-20-28-29.bag  robot1_2019-02-14-20-45-15.bag  robot1_2019-02-14-20-47-24.bag  robot1_2019-02-14-20-50-23.bag  robot1_2019-02-14-20-52-46.bag  robot1_2019-02-14-21-05-09.bag  robot1_2019-02-14-21-06-25.bag  robot1_2019-02-14-21-18-57.bag  robot1_2019-02-14-21-22-47.bag  robot2_2019-02-16-21-30-24.bag  robot2_2019-02-16-21-31-47.bag  robot2_2019-02-16-21-37-59.bag  robot2_2019-02-16-21-44-17.bag  robot2_2019-02-16-21-50-50.bag  robot2_2019-02-16-21-51-40.bag  robot2_2019-02-16-21-53-55.bag  robot2_2019-02-17-01-43-03.bag  robot2_2019-02-17-01-47-52.bag  robot2_2019-02-17-15-38-11.bag  robot2_2019-02-17-16-05-11.bag  robot2_2019-02-17-16-09-12.bag  robot2_2019-02-17-16-12-49.bag  robot2_2019-02-17-16-19-41.bag  robot2_2019-06-26-18-24-21.bag  robot2_2019-06-26-18-30-53.bag  (+157 more)
riki_msgs/: CMakeLists.txt
robot_vision/: CMakeLists.txt  package.xml
test_tools/: CMakeLists.txt  package.xml
vehicle/: CMakeLists.txt  package.xml
vmu931/: CMakeLists.txt  package.xml
(+62 files in other folders)
