<?xml version="1.0.0"?>
<package>
  <name>base_com</name>
  <version>1.0.0</version>
  <description>Two wheel differential drive ROS platform</description>
  <maintainer email="304050118@qq.com">t</maintainer>
  <license>BSD</license>

   <author email="304050118@qq.com">kevin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>ros_arduino_msgs</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>riki_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <!-- <run_depend>ros_arduino_msgs</run_depend>-->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>riki_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>
  </export>
</package>
